# sync-branch-deps

./: .config.include.mk  .containerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Makefile  README.md  release-please-config.json
.github/: ci.override.mk  dependabot.yml
.github/workflows/: ci.yml  publish-tag.yml  release.yml
decisions/: 0000-use-madr.md  0001-unboxed-ureq-error-in-registry-client.md  0002-container-image-tagging.md  0003-rust-single-static-binary.md  0004-resolve-and-pin-only.md  0005-decoupled-resolvers-and-rewriters.md  0006-distroless-multi-arch-image.md  0007-flat-forward-compatible-config.md  0008-environment-adaptive-output.md  0009-sync-verify-subcommands.md  0010-config-ignores-unusable-values.md  0011-oci-credentials-from-standard-sources.md  0012-detect-branch-in-container-from-git-head.md  template.md
src/: cli.rs  config.rs  git.rs  lib.rs  main.rs  reporters.rs  resolvers.rs  rewriters.rs  slug.rs
src/reporters/: github.rs  json.rs  plain.rs  quiet.rs
src/resolvers/: npm.rs  oci.rs
src/rewriters/: compose.rs  package_json.rs
tests/: integration.rs
