[package]
name = "sync-branch-deps"
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
description = "Resolve cross-repo feature-branch dependencies to matching pre-release artifacts (npm dist-tags, container branch tags)."
repository = "https://github.com/swiftaspect/sync-branch-deps"
readme = "README.md"
keywords = ["ci", "monorepo", "polyrepo", "dependencies", "branch"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sbd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
regex = "1"
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
ureq = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
